--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
     "js-cookie": "^3.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-responsive-modal": "^6.2.0",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5"
   },
