--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.10",
     "js-cookie": "^3.0.1",
     "next": "12.2.5",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.2.0",
