--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^2.0.10",
+    "chart.js": "^3.9.1",
     "js-cookie": "^3.0.1",
     "next": "12.2.5",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-data-table-component": "^7.5.2",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
