--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,22 +1,32 @@
 {
-  "name": "Budget Tracker",
-  "short_name": "Budget",
-  "icons": [
-    {
-      "src": "/iconSmall.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-
-    {
-      "src": "/iconBig.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
-  "start_url": "/",
-  "display": "standalone",
-  "orientation": "portrait"
+    "theme_color": "#3fd467",
+    "background_color": "#253c1d",
+    "display": "standalone",
+    "scope": "/",
+    "start_url": "/",
+    "name": "Budget Tracker",
+    "short_name": "Budget",
+    "description": "Budget Tracker Application By Caspian",
+    "icons": [
+        {
+            "src": "/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
